--- a/public/package.json
+++ b/public/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "select2": "^4.0.12"
   }
 }
